2007-09-27  Milan Crha  <mcrha@redhat.com>

	** Fix for bug #324472

	* gui/e-calendar-table.c: (struct AffectedComponents),
	(e_calendar_table_complete_selected),  (get_selected_components_cb),
	(do_for_selected_components), (mark_comp_complete_cb),
	(mark_comp_incomplete_cb): Added new helper structure and functions.
	* gui/e-calendar-table.c: (mark_as_complete_cb),
	(mark_as_incomplete_cb): Using new helper functions.
	* gui/e-cal-model-tasks.h: (e_cal_model_tasks_mark_comp_complete),
	(e_cal_model_tasks_mark_comp_incomplete): New functions (replace old).
	* gui/e-cal-model-tasks.c: (commit_component_changes),
	(ecmt_set_value_at), (e_cal_model_tasks_mark_comp_complete),
	(e_cal_model_tasks_mark_comp_incomplete): Added new functions to work
	with components instead of table's rows and using them.

2007-09-21  Milan Crha  <mcrha@redhat.com>

	** Fix for bug #411125

	* gui/dialogs/meeting-page.etspec:
	* gui/e-meeting-time-sel.etspec:
	* gui/e-memo-table.etspec:
	* gui/e-calendar-table.etspec:
	* gui/e-cal-list-view.etspec:
	Uses 'compare="collate"' instead of 'compare="string"' to handle UTF
	characters correctly.

2007-09-10  Suman Manjunath  <msuman@novell.com>

	** Fix for bug #300284 (bnc)

	* gui/e-cal-list-view.c: (setup_e_table): Do not allow the user to set
	a 'no-date' for start/end of appointments in list view.

2007-09-10  Milan Crha  <mcrha@redhat.com>
	
	** Fix for bug #368033

	* gui/calendar-component.c: (ensure_sources):
	Assign default color for B&A when no color is set.

2007-09-10  Chenthill Palanisamy  <pchenthill@novell.com>

	Fixes#332026
	* gui/e-day-view.c: (e_day_view_do_key_press),
	(e_day_view_start_editing_event): Filter the input context
	key events.					  

	Committing on behalf of Mayank <mayank.gnu@gmail.com>

2007-09-10  Chenthill Palanisamy  <pchenthill@novell.com>

	Fixes #270605
	* gui/dialogs/event-page.c: (event_page_select_organizer),
	(event_page_construct):
	* gui/dialogs/task-page.c: (task_page_select_organizer),